fix: text overflow

--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -7,6 +7,7 @@
   color: #fff;
   margin-bottom: 36px;
   text-overflow: ellipsis;
+  overflow: hidden;
   white-space: nowrap;
 }
 
