--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -8,6 +8,7 @@
   margin: 0 10px 0 0;
   text-overflow: ellipsis;
   white-space: nowrap;
+  overflow: hidden;
   max-width: 244px;
 }
 
